prevent flicker in responsive tabs
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@12522 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified/stylesheet.css
+++ b/templates/tpl_modified/stylesheet.css
@@ -126,6 +126,9 @@ strong, b {
   padding:0;
 }
 /* prevent flicker in responsive tabs */
+#horizontalAccordion {
+  display:none;
+}
 #horizontalAccordion ul.resp-tabs-list {
   display:none !important;
 }
